fixing build problems